--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ branches:
     only:
         - master
 
+before_install:
+    - openssl aes-256-cbc -K $encrypted_7eb1121a80e0_key -iv $encrypted_7eb1121a80e0_iv -in TravisDeployKey.enc -out
+      TravisDeployKey -d 
+    - chmod 600 TravisDeployKey
+    - eval "$(ssh-agent -s)"
+    - ssh-add TravisDeployKey
+
 install:
     - pip install coverage
     - pip install coveralls
