--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ branches:
     only:
         - master
 
+before_install:
+    - echo "In before_install"
+
 # list of commands to run to setup the environment
 install:
     - pip install coverage
