--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ language: python
 python:
     - 3.6
 
+# Travis does the clone before anything (as far as I 
+# tell), but we need to set up the key first; I'll turn
+# off automatic recursion into submodules and then 
+# do it manually after the key is available
 git:
     submodules: false
     
@@ -14,8 +18,15 @@ branches:
     only:
         - master
 
+# now we can decrypt the key and set it up, then recurse
+# into the submodule
 before_install:
-    - echo "In before_install"
+    - openssl aes-256-cbc -K $encrypted_7eb1121a80e0_key -iv $encrypted_7eb1121a80e0_iv -in TravisDeployKey.enc -out
+      TravisDeployKey -d
+    - chmod 600 TravisDeployKey
+    - eval "$(ssh-agent -s)"
+    - ssh-add TravisDeployKey
+    - git submodule update --init --recursive
 
 # list of commands to run to setup the environment
 install:
